# MTG-agentic-card-search

./: .gitignore  README.md
backend/: .env.example  cli.py  main.py  pyproject.toml  requirements.txt
backend/agent/: common_prompts.py  search_agent.py
backend/agent/tools/: card_search_tool.py
backend/database/: bootstrap_db.py  build_search_indices.py  embedding_text.py  index_builder.py
backend/utils/: agents_sdk.py  constants.py  db_paths.py  profiling.py
frontend/: .env.example  app.py  main.py  pyproject.toml  requirements.txt
